correction contraste + nom de page

--- a/style.css
+++ b/style.css
@@ -775,7 +775,7 @@ h4 {
 }
 
 .tc-white {
-    color: gray!important;
+    color: #fbdacb!important;
 }
 
 .btn-atomic-tangerine {
@@ -810,7 +810,7 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+    background-image: url("img/la-chouette-agence-banniere.jpg");
 }
 
 .bg-lines-h2-bg {
